cabal-version:      3.0
name:               hs-bindgen-libclang
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Configure
synopsis:           Generate Haskell bindings from C headers: libclang provider
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1
extra-source-files: cbits/*.c
                    cbits/*.h
                    configure
                    hs-bindgen-libclang.buildinfo.in

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      DerivingStrategies
      DerivingVia
      TypeFamilies
      UndecidableInstances

library
  import:         lang
  hs-source-dirs: src

  other-extensions:
      CApiFFI
  exposed-modules:
      -- Low-level libclang bindings
      HsBindgen.Clang.Args
      HsBindgen.Clang.Core
      HsBindgen.Clang.Doxygen
  exposed-modules:
      -- Auxiliary functionality, without direct counterparts in libclang
      HsBindgen.Clang.Aux.Classification
      HsBindgen.Clang.Aux.Fold
      HsBindgen.Clang.Aux.SourceLoc
  other-modules:
      HsBindgen.Clang.Core.Enums
      HsBindgen.Clang.Core.Instances
      HsBindgen.Clang.Doxygen.Enums
      HsBindgen.Clang.Doxygen.Instances
      HsBindgen.Clang.Internal.Bindings
      HsBindgen.Clang.Internal.CXString
      HsBindgen.Clang.Internal.FFI
  build-depends:
      -- Internal dependencies
    , hs-bindgen-patterns
  build-depends:
      -- External dependencies
    , bytestring  >= 0.11 && < 0.13
    , utf8-string >= 1.0  && < 1.1

  -- C bindings
  include-dirs: cbits
  cc-options:   -Wall

  c-sources:
      cbits/clang_wrappers.c
      cbits/doxygen_wrappers.c

test-suite clang-tutorial
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        clang-tutorial.hs
  hs-source-dirs: clang-tutorial

  build-depends:
      -- Internal dependencies
    , hs-bindgen-libclang
    , hs-bindgen-patterns
