cabal-version:      3.0
name:               hs-bindgen-libclang
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Configure
synopsis:           Generate Haskell bindings from C headers: libclang provider
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1
extra-source-files: cbits/*.c
                    cbits/*.h
                    configure
                    hs-bindgen-libclang.buildinfo.in

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      -- We don't provide a shared list of default extension between the library
      -- and the clang-tutorial example; this way we can ensure that mere
      -- /usage/ of the library does not result in requirements for enabled
      -- language extensions.

library
  import:         lang
  hs-source-dirs: src

  default-extensions:
      CApiFFI
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      MagicHash
      TypeFamilies
      UnboxedTuples
      UndecidableInstances
      UnliftedFFITypes
      UnliftedNewtypes
  other-extensions:
      AllowAmbiguousTypes
  exposed-modules:
      -- Low-level libclang bindings
      HsBindgen.Clang.Args
      HsBindgen.Clang.Core
      HsBindgen.Clang.Doxygen
  exposed-modules:
      -- Additional utilities, without direct counterparts in libclang
      HsBindgen.Clang.Util.Classification
      HsBindgen.Clang.Util.Diagnostics
      HsBindgen.Clang.Util.Fold
      HsBindgen.Clang.Util.SourceLoc
      HsBindgen.Clang.Util.Tokens
  other-modules:
      HsBindgen.Clang.Core.Enums
      HsBindgen.Clang.Core.Instances
      HsBindgen.Clang.Core.Structs
      HsBindgen.Clang.Doxygen.Enums
      HsBindgen.Clang.Doxygen.Instances
      HsBindgen.Clang.Doxygen.Structs
      HsBindgen.Clang.Internal.ByValue
      HsBindgen.Clang.Internal.CXString
      HsBindgen.Clang.Internal.FFI
      HsBindgen.Clang.Internal.Results
  build-depends:
      -- Internal dependencies
    , hs-bindgen-patterns
  build-depends:
      -- External dependencies
    , text >= 1.2 && < 2.2

  if impl(ghc < 9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  -- C bindings
  include-dirs: cbits
  cc-options:   -Wall

  c-sources:
      cbits/clang_wrappers.c

test-suite clang-tutorial
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        clang-tutorial.hs
  hs-source-dirs: clang-tutorial

  build-depends:
      -- Internal dependencies
    , hs-bindgen-libclang
    , hs-bindgen-patterns
