cabal-version:      3.0
name:               hs-bindgen-libclang
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Configure
synopsis:           Generate Haskell bindings from C headers: libclang provider
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1
extra-source-files: cbits/*.c
                    cbits/*.h
                    configure
                    hs-bindgen-libclang.buildinfo.in

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      -- We don't provide a shared list of default extension between the library
      -- and the clang-tutorial example; this way we can ensure that mere
      -- /usage/ of the library does not result in requirements for enabled
      -- language extensions.

library
  import:         lang
  hs-source-dirs: src

  default-extensions:
      CApiFFI
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      MagicHash
      TypeFamilies
      UnboxedTuples
      UndecidableInstances
      UnliftedFFITypes
      UnliftedNewtypes
  other-extensions:
      AllowAmbiguousTypes
  exposed-modules:
      HsBindgen.Clang.Args
      HsBindgen.Clang.Version

      HsBindgen.Clang.LowLevel.Core
      HsBindgen.Clang.LowLevel.Doxygen

      HsBindgen.Clang.HighLevel
      HsBindgen.Clang.HighLevel.Types
  other-modules:
      HsBindgen.Clang.LowLevel.Core.Enums
      HsBindgen.Clang.LowLevel.Core.Instances
      HsBindgen.Clang.LowLevel.Core.Structs
      HsBindgen.Clang.LowLevel.Doxygen.Enums
      HsBindgen.Clang.LowLevel.Doxygen.Instances
      HsBindgen.Clang.LowLevel.Doxygen.Structs
      HsBindgen.Clang.Internal.ByValue
      HsBindgen.Clang.Internal.CXString
      HsBindgen.Clang.Internal.FFI
      HsBindgen.Clang.Internal.Results
      HsBindgen.Clang.HighLevel.Diagnostics
      HsBindgen.Clang.HighLevel.Fold
      HsBindgen.Clang.HighLevel.SourceLoc
      HsBindgen.Clang.HighLevel.Tokens
      HsBindgen.Clang.HighLevel.UserProvided
  build-depends:
      -- Internal dependencies
    , hs-bindgen-patterns
  build-depends:
      -- External dependencies
    , mtl         >= 2.2  && < 2.4
    , pretty-show >= 1.10 && < 1.11
    , text        >= 1.2  && < 2.2

  if impl(ghc < 9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  -- C bindings
  include-dirs: cbits
  cc-options:   -Wall

  c-sources:
      cbits/clang_wrappers.c

executable clang-ast-dump
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: clang-ast-dump

  build-depends:
      -- Internal dependencies
    , hs-bindgen-libclang
    , hs-bindgen-patterns
  build-depends:
      -- Inherited dependencies
    , text
  build-depends:
      -- External dependencies
    , optparse-applicative >= 0.18 && < 0.19

test-suite clang-tutorial
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        clang-tutorial.hs
  hs-source-dirs: clang-tutorial

  build-depends:
      -- Internal dependencies
    , hs-bindgen-libclang
    , hs-bindgen-patterns
