cabal-version:      3.0
name:               hs-bindgen-runtime
version:            0.1.0
synopsis:           Design patterns for writing high-level FFI bindings
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      DataKinds
      DeriveAnyClass
      DerivingStrategies
      FunctionalDependencies
      RoleAnnotations
      ScopedTypeVariables
  other-extensions:
      CPP

library
  import:
      lang
  exposed-modules:
      HsBindgen.Runtime.Arithmetic
      HsBindgen.Runtime.Backtrace
      HsBindgen.Runtime.ConstantArray
      HsBindgen.Runtime.Enum.Bitfield
      HsBindgen.Runtime.Enum.Simple
      HsBindgen.Runtime.FlexibleArrayMember
      HsBindgen.Runtime.LibC
  other-modules:
      HsBindgen.Runtime.LibC.Arch
  hs-source-dirs:
      src
  if arch(x86_64)
    hs-source-dirs: src-x86_64
  else
    if arch(aarch64)
      hs-source-dirs: src-aarch64
    else
      buildable: False
  build-depends:
    , pretty-show >= 1.10 && < 1.11
    , vector ^>=0.13.2.0
