cabal-version:      3.0
name:               hs-bindgen-runtime
version:            0.1.0
synopsis:           Design patterns for writing high-level FFI bindings
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.1

common lang
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.21
  default-language:
      GHC2021
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      FunctionalDependencies
      RecordWildCards
      RoleAnnotations
      ScopedTypeVariables
  other-extensions:
      CPP

library
  import:
      lang
  exposed-modules:
      HsBindgen.Runtime.Backtrace
      HsBindgen.Runtime.ByteArray
      HsBindgen.Runtime.ConstantArray
      HsBindgen.Runtime.Enum.Bitfield
      HsBindgen.Runtime.Enum.Simple
      HsBindgen.Runtime.FlexibleArrayMember
      HsBindgen.Runtime.LibC
      HsBindgen.Runtime.Marshal
      HsBindgen.Runtime.Syntax
      HsBindgen.Runtime.SizedByteArray
      HsBindgen.Runtime.Bitfield
  hs-source-dirs:
      src
  build-depends:
    , vector ^>=0.13.2.0
    , primitive ^>=0.9.0.0
  if impl(ghc < 9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2
  build-tool-depends:
      hsc2hs:hsc2hs

test-suite runtime-tests
  import:         lang
  hs-source-dirs: tests
  type:           exitcode-stdio-1.0
  main-is:        runtime-tests.hs
  build-depends:
    , base
    , hs-bindgen-runtime

  build-depends:
    , QuickCheck        ^>=2.15.0.1
    , tasty             ^>=1.5
    , tasty-quickcheck  ^>=0.11.1
