cabal-version:      3.0
name:               hs-bindgen
version:            0.1.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Generate Haskell bindings from C headers
extra-doc-files:    CHANGELOG.md
tested-with:      , GHC==9.2.8
                  , GHC==9.4.8
                  , GHC==9.6.6
                  , GHC==9.8.2
                  , GHC==9.10.2
                  , GHC==9.12.2
extra-source-files: bootstrap/*.h
                    examples/**/*.h
                    examples/**/*.yaml
                    fixtures/*.hs
                    fixtures/*.rs
                    fixtures/*.txt
                    fixtures/*.yaml
                    musl-include/**/*.h

flag dev
  description: Build debugging utilities for developing hs-bindgen itself
  default: False
  manual: True

common lang
  ghc-options:
      -Wall
      -Widentities
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages
      -Wno-unticked-promoted-constructors
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DerivingStrategies
      DerivingVia
      DisambiguateRecordFields
      FunctionalDependencies
      LambdaCase
      MultiWayIf
      OverloadedStrings
      PatternSynonyms
      QuantifiedConstraints
      RecordWildCards
      TypeApplications
      TypeFamilies
      UndecidableInstances
      ViewPatterns
  if impl(ghc >= 9.8)
    default-extensions:
      TypeAbstractions

library internal
  import:         lang
  hs-source-dirs: src-internal

  -- Modules intended to define the public interface.
  exposed-modules:
      HsBindgen.Common
      HsBindgen.Lib

  -- Internal modules.
  exposed-modules:
      Data.DynGraph
      Data.DynGraph.Labelled
      HsBindgen
      HsBindgen.Backend
      HsBindgen.Backend.Extensions
      HsBindgen.Backend.Artefact.HsModule.Names
      HsBindgen.Backend.Artefact.HsModule.Render
      HsBindgen.Backend.Artefact.HsModule.Translation
      HsBindgen.Backend.Artefact.Test
      HsBindgen.Backend.Artefact.Test.C
      HsBindgen.Backend.Artefact.Test.Hs
      HsBindgen.Backend.Artefact.Test.Internal
      HsBindgen.Backend.Artefact.Test.Readme
      HsBindgen.Backend.Hs.AST
      HsBindgen.Backend.Hs.AST.SigmaType
      HsBindgen.Backend.Hs.AST.Strategy
      HsBindgen.Backend.Hs.AST.Type
      HsBindgen.Backend.Hs.Haddock.Config
      HsBindgen.Backend.Hs.Haddock.Documentation
      HsBindgen.Backend.Hs.Haddock.Translation
      HsBindgen.Backend.Hs.Origin
      HsBindgen.Backend.Hs.Translation
      HsBindgen.Backend.Hs.CallConv
      HsBindgen.Backend.SHs.AST
      HsBindgen.Backend.SHs.Simplify
      HsBindgen.Backend.SHs.Translation
      HsBindgen.Backend.TH.Translation
      HsBindgen.Backend.UniqueId
      HsBindgen.BindingSpec
      HsBindgen.BindingSpec.Gen
      HsBindgen.BindingSpec.Private
      HsBindgen.BindingSpec.Private.Stdlib
      HsBindgen.Boot
      HsBindgen.Clang
      HsBindgen.Clang.BuiltinIncDir
      HsBindgen.Config
      HsBindgen.Config.FixCandidate
      HsBindgen.Config.FixCandidate.ReservedNames
      HsBindgen.Eff
      HsBindgen.Errors
      HsBindgen.Frontend
      HsBindgen.Frontend.Analysis.DeclIndex
      HsBindgen.Frontend.Analysis.DeclUseGraph
      HsBindgen.Frontend.Analysis.IncludeGraph
      HsBindgen.Frontend.Analysis.Typedefs
      HsBindgen.Frontend.Analysis.UseDeclGraph
      HsBindgen.Frontend.AST.Coerce
      HsBindgen.Frontend.AST.Deps
      HsBindgen.Frontend.AST.External
      HsBindgen.Frontend.AST.Finalize
      HsBindgen.Frontend.AST.Internal
      HsBindgen.Frontend.AST.PrettyPrinter
      HsBindgen.Frontend.Macro.AST.C
      HsBindgen.Frontend.Macro.AST.Syntax
      HsBindgen.Frontend.Macro.Reparse
      HsBindgen.Frontend.Macro.Reparse.Common
      HsBindgen.Frontend.Macro.Reparse.Decl
      HsBindgen.Frontend.Macro.Reparse.Infra
      HsBindgen.Frontend.Macro.Reparse.Literal
      HsBindgen.Frontend.Macro.Reparse.Macro
      HsBindgen.Frontend.Macro.Reparse.Type
      HsBindgen.Frontend.Macro.Tc
      HsBindgen.Frontend.Macro.Tc.Type
      HsBindgen.Frontend.Naming
      HsBindgen.Frontend.NonParsedDecls
      HsBindgen.Frontend.Pass
      HsBindgen.Frontend.Pass.HandleMacros
      HsBindgen.Frontend.Pass.HandleMacros.IsPass
      HsBindgen.Frontend.Pass.HandleTypedefs
      HsBindgen.Frontend.Pass.HandleTypedefs.IsPass
      HsBindgen.Frontend.Pass.MangleNames
      HsBindgen.Frontend.Pass.MangleNames.IsPass
      HsBindgen.Frontend.Pass.NameAnon
      HsBindgen.Frontend.Pass.NameAnon.IsPass
      HsBindgen.Frontend.Pass.Parse
      HsBindgen.Frontend.Pass.Parse.Decl
      HsBindgen.Frontend.Pass.Parse.Decl.Monad
      HsBindgen.Frontend.Pass.Parse.IsPass
      HsBindgen.Frontend.Pass.Parse.Type
      HsBindgen.Frontend.Pass.Parse.Type.Monad
      HsBindgen.Frontend.Pass.ResolveBindingSpec
      HsBindgen.Frontend.Pass.ResolveBindingSpec.IsPass
      HsBindgen.Frontend.Pass.Select
      HsBindgen.Frontend.Pass.Select.IsPass
      HsBindgen.Frontend.Pass.Sort
      HsBindgen.Frontend.Pass.Sort.IsPass
      HsBindgen.Frontend.Predicate
      HsBindgen.Frontend.ProcessIncludes
      HsBindgen.Frontend.RootHeader
      HsBindgen.Guasi
      HsBindgen.Imports
      HsBindgen.Language.C
      HsBindgen.Language.C.Literal
      HsBindgen.Language.C.Prim
      HsBindgen.Language.Haskell
      HsBindgen.NameHint
      HsBindgen.Orphans
      HsBindgen.PrettyC
      HsBindgen.Resolve
      HsBindgen.TH.Internal
      HsBindgen.TraceMsg
      HsBindgen.Util.List
      HsBindgen.Util.Monad
      HsBindgen.Util.Parsec
      HsBindgen.Util.TestEquality
      HsBindgen.Util.Tracer
      Text.SimplePrettyPrint
  other-extensions:
      TemplateHaskellQuotes
  build-depends:
      -- Internal dependencies
    , c-expr-runtime
    , clang
    , hs-bindgen-runtime
  build-depends:
      -- External dependencies
    , aeson              >= 2.2.1.0    && < 2.3
    , ansi-terminal      >= 1.0.0      && < 1.2
    , array              >= 0.5.4.0    && < 0.6
    , base16-bytestring  >= 1.0.2.0    && < 1.1
    , bytestring         >= 0.11.4.0   && < 0.13
    , containers         >= 0.6.5.1    && < 0.8
    , contra-tracer      >= 0.2        && < 0.3
    , cryptohash-sha256  >= 0.11.102.1 && < 0.12
    , data-default       >= 0.8        && < 0.9
    , debruijn           ^>=0.3.1
    , directory          >= 1.3.6.2    && < 1.4
    , filepath           >= 1.4        && < 1.6
    , fin                >= 0.3.2      && < 0.4
    , generics-sop       >= 0.5.1.4    && < 0.6
    , mtl                >= 2.2        && < 2.4
    , parsec             >= 3.1        && < 3.2
    , pretty             >= 1.1.3.6    && < 1.2
    , process            >= 1.6        && < 1.7
    , regex-pcre-builtin >= 0.95       && < 0.96
    , scientific         >= 0.3.7      && < 0.4
    , silently           >= 1.2.5.3    && < 1.3
    , some               >= 1.0.6      && < 1.1
    , template-haskell   >= 2.18       && < 2.24
    , text               >= 1.2        && < 2.2
    , time               >= 1.11       && < 1.15
    , transformers       >= 0.5        && < 0.7
    , unliftio-core      ^>=0.2.1.0
    , vec                >= 0.5        && < 0.6
    , witherable         >= 0.4.2      && < 0.6
    , yaml               >= 0.11.11.1  && < 0.12

  if impl(ghc < 9.4)
    build-depends:
        data-array-byte >=0.1.0.1 && <0.2
        -- for getPackageRoot
      , th-compat ^>=0.1.6

library
  import:         lang
  hs-source-dirs: src

  exposed-modules:
      HsBindgen.TH
  other-modules:
  reexported-modules:
    , HsBindgen.Config.FixCandidate
    , HsBindgen.Config.FixCandidate.ReservedNames
    , HsBindgen.Errors

  build-depends:
      -- Internal dependencies
    , hs-bindgen:internal
  build-depends:
      -- Inherited dependencies

executable hs-bindgen-cli
  import:         lang
  default-extensions:
      DuplicateRecordFields
      NoFieldSelectors
      OverloadedRecordDot
  main-is:        hs-bindgen-cli.hs
  hs-source-dirs: app

  other-modules:
      HsBindgen.App
      HsBindgen.Cli
      HsBindgen.Cli.Dev
      HsBindgen.Cli.Dev.BindingSpec
      HsBindgen.Cli.Dev.BindingSpec.StdLib
      HsBindgen.Cli.Dev.Clang
      HsBindgen.Cli.Dev.Parse
      HsBindgen.Cli.Dev.Resolve
      HsBindgen.Cli.Internal
      HsBindgen.Cli.Internal.Literate
      HsBindgen.Cli.GenTests
      HsBindgen.Cli.Preprocess
      Paths_hs_bindgen
  autogen-modules:
      Paths_hs_bindgen
  build-depends:
      -- Internal dependencies
    , clang
    , hs-bindgen:internal
  build-depends:
      -- Inherited dependencies
    , bytestring
    , containers
  build-depends:
      -- External dependencies
    , optics               >= 0.4.2.1   && < 0.5
    , optparse-applicative >= 0.18      && < 0.19
    , prettyprinter        ^>=1.7.1
    , text                 >= 1.2       && < 2.2

executable clang-ast-dump
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: clang-ast-dump
  if flag(dev)
    buildable: True
  else
    buildable: False

  build-depends:
      -- Internal dependencies
    , clang
    , hs-bindgen:internal
  build-depends:
      -- Inherited dependencies
    , containers
    , data-default
    , text
  build-depends:
      -- External dependencies
    , optparse-applicative >= 0.18 && < 0.19

library test-common
  import:         lang
  hs-source-dirs: test/common

  exposed-modules:
      Test.Common.HsBindgen.Trace
      Test.Common.HsBindgen.TracePredicate
      Test.Common.Util.Cabal
      Test.Common.Util.Tasty
      Test.Common.Util.Tasty.Golden

  build-depends:
      -- Internal dependencies
    , ansi-diff
    , ansi-terminal
    , hs-bindgen:internal
  build-depends:
      -- Inherited dependencies
    , bytestring
    , containers
    , directory
    , filepath
    , mtl
    , text
    , parsec
  build-depends:
      -- External dependencies
    , deepseq                     >= 1.4    && < 1.6
    , prettyprinter               >= 1.7    && < 1.8
    , prettyprinter-ansi-terminal >= 1.1    && < 1.2
    , tasty                       >= 1.5    && < 1.6
    , tasty-hunit                 >= 0.10.2 && < 0.11
    , tree-diff                   >= 0.3.4  && < 0.4
    , utf8-string                 >= 1.0.2  && < 1.1

test-suite test-hs-bindgen
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        test-hs-bindgen.hs
  hs-source-dirs: test/hs-bindgen

  other-modules:
      Test.HsBindgen.Golden
      Test.HsBindgen.Golden.Check.BindingSpec
      Test.HsBindgen.Golden.Check.C
      Test.HsBindgen.Golden.Check.Exts
      Test.HsBindgen.Golden.Check.FailingTrace
      Test.HsBindgen.Golden.Check.Hs
      Test.HsBindgen.Golden.Check.PP
      Test.HsBindgen.Golden.Check.Rust
      Test.HsBindgen.Golden.Check.TH
      Test.HsBindgen.Golden.TestCase
      Test.HsBindgen.Orphans.TreeDiff
      Test.HsBindgen.Prop.Selection
      Test.HsBindgen.Resources
      Test.HsBindgen.Resources.Rust
      Test.HsBindgen.Unit.ClangArgs
      Test.HsBindgen.Unit.Tracer

  build-depends:
      -- Internal dependencies
    , containers
    , c-expr-runtime
    , clang
    , hs-bindgen:internal
    , test-common
  build-depends:
      -- Inherited dependencies
    , containers
    , data-default
    , debruijn
    , directory
    , filepath
    , mtl
    , process
    , tasty
    , tasty-hunit
    , template-haskell
    , text
    , tree-diff
    , utf8-string
    , vec
  build-depends:
      -- External dependencies
    , syb              >= 0.7.2.4 && < 0.8
    , tasty-quickcheck >= 0.11.1  && < 0.12
    , temporary        >= 1.3     && < 1.4

test-suite test-th
  type:             exitcode-stdio-1.0
  main-is:          test-th.hs
  hs-source-dirs:   test/th
  include-dirs:     examples
  default-language: GHC2021

  other-modules:
      Test.TH.Simple
      Test.TH.Test01
      Test.TH.Test02

  build-depends:
      -- Internal dependencies
    , hs-bindgen
    , hs-bindgen-runtime
    , test-common
  build-depends:
      -- Inherited dependencies
    , base
    , tasty
    , tasty-hunit
  build-depends:
      -- External dependencies
    , vector ^>= 0.13.2.0

test-suite test-pp
  type:             exitcode-stdio-1.0
  main-is:          ../th/test-th.hs
  hs-source-dirs:   test/pp
  include-dirs:     examples
  default-language: GHC2021

  other-modules:
      Test.PP.Test01
      Test.PP.Test02

  -- Here we use literate haskell "hook" to avoid setting up true preprocessors
  -- (which would require either build-type: Custom or Hooks - both not a great options, at least yet).
  --
  -- The source files contains the actual options and arguments to be used with hs-bindgen
  ghc-options: -pgmL hs-bindgen-cli -optL internal -optL literate
  cpp-options: -DTEST_PP

  build-tool-depends: hs-bindgen:hs-bindgen-cli
  build-depends:
      -- Internal dependencies
    , c-expr-runtime
    , hs-bindgen-runtime
    , test-common
  build-depends:
      -- Inherited dependencies
    , base <5
    , tasty
    , tasty-hunit
  build-depends:
      -- External dependencies
    , vector ^>=0.13.2.0
  if impl(ghc < 9.4)
    build-depends: data-array-byte
